# sibers-django-test-news

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  configuration.py  docker-compose.yml  pyproject.toml
news/: asgi.py  settings.py  urls.py  wsgi.py
newspaper/: admin.py  forms.py  models.py  urls.py  views.py
newspaper/migrations/: 0001_initial.py
newspaper/templates/newspaper/: add_news.html  base.html  news_detail.html  news_list.html
